# internal/api/admin/service.go
@@ -33,8 +33,8 @@ func (s *Service) CreatePromotion(ctx context.Context, req *desc.CreatePromotion
 		Theme:              req.Theme,
 		DateFrom:           req.DateFrom,
 		DateTo:             req.DateTo,
-		IdentificationMode: entity.IdentificationMode(req.IdentificationMode),
-		PricingModel:       entity.PricingModel(req.PricingModel),
+		IdentificationMode: req.IdentificationMode,
+		PricingModel:       req.PricingModel,
 		SlotCount:          int(req.SlotCount),
 		MinDiscount:        &req.MinDiscount,
 		MaxDiscount:        &req.MaxDiscount,
